--- a/udemy/integracao-continua-jenkins/tools/docker-compose.yml
+++ b/udemy/integracao-continua-jenkins/tools/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     volumes:
       - ./config/tomcat/tomcat-users.xml:/usr/local/tomcat/conf/tomcat-users.xml
       - ./config/tomcat/context.xml:/tmp/context.xml
+    networks:
+      - tools
   jenkins:
     image: jenkins/jenkins:lts-jdk11
     container_name: jenkins
@@ -18,6 +20,22 @@ services:
       - 50000:50000
     volumes:
       - jenkins_home:/var/jenkins_home
+    networks:
+      - tools
+  db: # pg-tasks
+    image: postgres:9.6
+    container_name: pg-tasks
+    environment:
+      POSTGRES_DB: tasks
+      POSTGRES_PASSWORD: password
+    ports:
+      - 5433:5432
+    networks:
+      - tools
+  
 
 volumes:
   jenkins_home:
+
+networks:
+  tools:
